Add conection to ollama on notebook

--- a/jupyter/app/main.ipynb
+++ b/jupyter/app/main.ipynb
@@ -13,82 +13,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "35490372",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os"
+    "import os\n",
+    "\n",
+    "from langchain_ollama import OllamaLLM"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "9430af6c",
+   "execution_count": 10,
+   "id": "78c679a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/app'"
+       "'http://ollama:11434'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "os.getcwd()"
+    "ollama_url = os.getenv('OLLAMA_URL')\n",
+    "ollama_url"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "5ff5c72f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['.ipynb_checkpoints', 'graphs', 'main.ipynb', 'requirements.txt']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "os.listdir()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "28f6d72a",
+   "execution_count": 11,
+   "id": "82b1b84b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from graphs.testing import test"
+    "model = 'llama3.2'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "78644766",
+   "execution_count": 14,
+   "id": "0585eb17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "llm = OllamaLLM(model=model, base_url=ollama_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "35a69cc6",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'How can I assist you today?'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "test()"
+    "llm.invoke('Hi')"
    ]
   }
  ],
