--- a/jupyter/app/main.ipynb
+++ b/jupyter/app/main.ipynb
@@ -13,77 +13,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "35490372",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "from langchain_ollama import OllamaLLM"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "78c679a1",
+   "execution_count": 3,
+   "id": "9430af6c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://ollama:11434'"
+       "'/app'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ollama_url = os.getenv('OLLAMA_URL')\n",
-    "ollama_url"
+    "os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "82b1b84b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = 'llama3.2'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "0585eb17",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "llm = OllamaLLM(model=model, base_url=ollama_url)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "35a69cc6",
+   "execution_count": 4,
+   "id": "5ff5c72f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'How can I assist you today?'"
+       "['.ipynb_checkpoints', 'graphs', 'main.ipynb', 'requirements.txt']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "llm.invoke('Hi')"
+    "os.listdir()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "28f6d72a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from graphs.testing import test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "78644766",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n"
+     ]
+    }
+   ],
+   "source": [
+    "test()"
    ]
   }
  ],
