Added Qdrant to project

--- a/jupyter/app/main.ipynb
+++ b/jupyter/app/main.ipynb
@@ -90,6 +90,39 @@
    "source": [
     "test()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "3f86536e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from qdrant_client import QdrantClient\n",
+    "\n",
+    "qdrant = QdrantClient(\"http://qdrant:6333\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5992898a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VersionInfo(title='qdrant - vector search engine', version='1.14.1', commit='530430fac2a3ca872504f276d2c91a5c91f43fa0')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qdrant.info()"
+   ]
   }
  ],
  "metadata": {
