Added mongo collection

--- a/jupyter/app/main.ipynb
+++ b/jupyter/app/main.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "9fc102df",
    "metadata": {},
    "outputs": [],
@@ -45,23 +45,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "32a24b93",
+   "execution_count": 11,
+   "id": "667a212c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pymongo import MongoClient"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "6ae9e3be",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mongo_uri = os.getenv('ME_CONFIG_MONGODB_URL')\n",
+    "client = MongoClient(mongo_uri)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c3ec42c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "db = client['test_db']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "547f46f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col = db['test_col']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "55d6f021",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Response [404]>"
+       "InsertOneResult(ObjectId('68620aeb22563a98fe326758'), acknowledged=True)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "requests.get('https://www.bbva.mx/personas/productos/creditos/credito-hipotecario/opciones-para-tu-casa-nueva.htm')"
+    "col.insert_one({'Hi': 'World'})"
    ]
   },
   {
